feat(error): error component

--- a/src/app/phone/phone-list/phone-list-container/phone-list-container.component.html
+++ b/src/app/phone/phone-list/phone-list-container/phone-list-container.component.html
@@ -1,2 +1,5 @@
 <mat-spinner *ngIf="loading"></mat-spinner>
+
 <app-phone-card *ngFor="let phone of phones" [phone]="phone"></app-phone-card>
+
+<app-error-element *ngIf="error" [error]="error"></app-error-element>
