feat(store, component, style, tslint): new store to phone detail, new phone-detail component, components styles and new tslint

--- a/src/app/phone/phone-list/phone-card/phone-card.component.html
+++ b/src/app/phone/phone-list/phone-card/phone-card.component.html
@@ -1,10 +1,12 @@
-<mat-card class="phone-card">
-  <mat-card-header>
-    <mat-card-title>{{phone.title}}</mat-card-title>
-    <mat-card-subtitle>{{phone.description}}, {{phone.color}}</mat-card-subtitle>
-  </mat-card-header>
-  <img mat-card-image [src]="phone.image" [alt]="phone.title">
-  <mat-card-content>
-    <p>{{phone.price}}€</p>
-  </mat-card-content>
-</mat-card>
+<a class="phone-card" [routerLink]="['/smartphone', phone.id]">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>{{phone.title}}</mat-card-title>
+      <mat-card-subtitle>{{phone.description}}, {{phone.color}}</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image [src]="phone.image" [alt]="phone.title">
+    <mat-card-content>
+      <p>{{phone.price}}€</p>
+    </mat-card-content>
+  </mat-card>
+</a>
