--- a/src/app/phone/phone-list/phone-list-container/phone-list-container.component.scss
+++ b/src/app/phone/phone-list/phone-list-container/phone-list-container.component.scss
@@ -1,3 +1,8 @@
-:host {
+.phone-list__title {
+  border-bottom: solid;
+}
+.phone-list__container {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
