--- a/src/app/phone/phone-list/phone-list-container/phone-list-container.component.scss
+++ b/src/app/phone/phone-list/phone-list-container/phone-list-container.component.scss
@@ -3,3 +3,15 @@
   flex-wrap: wrap;
   justify-content: space-around;
 }
+
+.phone-list__load-more {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 70px;
+
+  .load-more__button {
+    padding: 20px 40px;
+    font-size: 1em;
+    margin: 20px 0;
+  }
+}
