feat(code error): api returns 404 error when data isn't found

--- a/client/src/app/phone/phone-list/phone-list-container/phone-list-container.component.html
+++ b/client/src/app/phone/phone-list/phone-list-container/phone-list-container.component.html
@@ -9,6 +9,6 @@
 
 <mat-spinner *ngIf="loading"></mat-spinner>
 
-<section class="phone-list__load-more">
+<section class="phone-list__load-more" *ngIf="!error && (pageNumber*pageSize)<100">
   <button class="load-more__button" *ngIf="!loading" (click)="loadMore()">Load more</button>
 </section>
